--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,12 @@
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["codepath", "merch", "express", "postgres"],
+  "keywords": [
+    "codepath",
+    "merch",
+    "express",
+    "postgres"
+  ],
   "author": "Your Name",
   "license": "ISC",
   "dependencies": {
@@ -19,7 +24,8 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "stripe": "^20.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
